# ComfyUI-FluxTrainer

./: .gitignore  README.md  __init__.py  fine_tune.py  flux_extract_lora.py  flux_minimal_inference_comfy.py  flux_trai_orig.py  flux_train_comfy.py  flux_train_network_comfy.py  hf_token.json  nodes.py  nodes_sd3.py  nodes_sdxl.py  prodigy_plus_schedulefree.py  pyproject.toml  requirements.txt  sd3_train_network.py  sdxl_train_network.py  train_db.py  train_network.py
examples/: flux_lora_train_example01.json  flux_lora_train_test_01.json  flux_train_example_01  sdxl_train_example_01.json
lycoris/: __init__.py  kohya.py
networks/: check_lora_weights.py  lora.py  lora_flux.py  lora_sd3.py  merge_lora.py  resize_lora.py
prodigyplusschedulefree/: core_optimiser.py  prodigy_plus_schedulefree.py
